alta usuario creada

--- a/frontend/src/app/components/altausuarios/altausuarios.component.html
+++ b/frontend/src/app/components/altausuarios/altausuarios.component.html
@@ -4,34 +4,37 @@
   
 <div class="card">
     <div class="card-body">
-<form>
-    <div class="form-group row">
-      <label for="inputEmail3" class="col-sm-2 col-form-label">Nombre</label>
-      <div class="col-sm-10">
-        <input type="email" class="form-control" id="inputEmail3" placeholder="Nombre">
-      </div>
-    </div>
-    <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Edad</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+      <form [formGroup]="userSignUp" (ngSubmit)="altaUsuario(userSignUp.value)" enctype="multipart/form-data">
+        <div class="form-group row">
+          <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input formControlName="id"  ngModel [email]="true" type="email" class="form-control" id="inputEmail" placeholder="Email">
+          </div>
         </div>
-      </div>
-      <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Email">
+
+        <div class="form-group row">
+          <label for="inputNombre" class="col-sm-2 col-form-label">Nombre</label>
+          <div class="col-sm-10">
+            <input formControlName="nombre" type="text" class="form-control" id="inputNombre" placeholder="Nombre">
+          </div>
         </div>
-      </div>
+
+        <div class="form-group row">
+          <label for="inputEdad" class="col-sm-2 col-form-label">Edad</label>
+          <div class="col-sm-10">
+            <input formControlName="edad" type="number" class="form-control" id="inputEdad" placeholder="Edad">
+          </div>
+        </div>
+
       <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <label for="inputPass" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+          <input formControlName="password" type="password" class="form-control" id="inputPass" placeholder="Password">
         </div>
       </div>
 
       <br>
-      <button type="submit" class="btn btn-primary  w-100">Dar Alta</button>
+      <button [disabled]="userSignUp.invalid" type="submit" class="btn btn-primary  w-100">Dar Alta</button>
   </form>
 
 </div>
