--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -2,27 +2,31 @@
 <br><br><br><br><br>
 <div class="container fill justify-content-center align-items-center">
     <!-- Content here -->
-  
+    <div class="form-check form-switch">
+        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+        <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil Off</label>
+        <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil On</label>
+    </div>
+
 <div class="card">
     <div class="card-body">
 <form>
       <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Email</label>
+        <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Email">
+          <input type="email" class="form-control" id="inputEmail" placeholder="Email">
         </div>
       </div>
       <div class="form-group row">
-        <label for="inputPassword3" class="col-sm-2 col-form-label">Password</label>
+        <label for="inputPass" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+          <input type="password" class="form-control" id="inputPass" placeholder="Password">
         </div>
       </div>
 
       <br>
       <button type="submit" class="btn btn-primary  w-100">Sign in</button>
   </form>
-
 </div>
 </div>
 
