--- a/frontend/src/app/components/altausuarios/altausuarios.component.html
+++ b/frontend/src/app/components/altausuarios/altausuarios.component.html
@@ -34,8 +34,9 @@
       </div>
 
       <br>
-      <button [disabled]="userSignUp.invalid" type="submit" class="btn btn-primary  w-100">Dar Alta</button>
-  </form>
+      <button [disabled]="userSignUp.invalid" type="submit" class="btn btn-primary  w-50">Dar Alta</button>
+      <a href="/login" class="btn btn-primary  w-70">Go Back</a>
+    </form>
 
 </div>
 </div>
