--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -3,29 +3,35 @@
 <div class="container fill justify-content-center align-items-center">
     <!-- Content here -->
     <div class="form-check form-switch">
-        <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-        <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil Off</label>
-        <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil On</label>
-    </div>
+        <input #modoStrorage [checked]="this._strogaType.isLocalAcivate()"  (change)="eventCheck(modoStrorage.checked)" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+        <ng-template [ngIf]="!this._strogaType.isLocalAcivate()" [ngIfElse]="volatilOn">
+          <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil Off</label>
+        </ng-template>
+        <ng-template #volatilOn>
+          <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil On</label>
+        </ng-template>
+      </div>
 
 <div class="card">
     <div class="card-body">
-<form>
+<form [formGroup]="singInForm" (ngSubmit)="loginUsuario(singInForm.value)">
       <div class="form-group row">
         <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
         <div class="col-sm-10">
-          <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+          <input formControlName="id"  ngModel [email]="true" type="email" class="form-control" id="inputEmail" placeholder="Email">
         </div>
       </div>
+
       <div class="form-group row">
         <label for="inputPass" class="col-sm-2 col-form-label">Password</label>
         <div class="col-sm-10">
-          <input type="password" class="form-control" id="inputPass" placeholder="Password">
+          <input formControlName="password" type="password" class="form-control" id="inputPass" placeholder="Password">
         </div>
       </div>
 
       <br>
-      <button type="submit" class="btn btn-primary  w-100">Sign in</button>
+      <button [disabled]="singInForm.invalid" type="submit" class="btn btn-primary  w-50">Sign in</button>
+      <a href="/altausuarios" class="btn btn-primary  w-70">Alta Usuario</a>
   </form>
 </div>
 </div>
