funciona con conexion a mongo db falta en memoria volatil

--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -30,8 +30,11 @@
       </div>
 
       <br>
-      <button [disabled]="singInForm.invalid" type="submit" class="btn btn-primary  w-50">Sign in</button>
-      <a href="/altausuarios" class="btn btn-primary  w-70">Alta Usuario</a>
+      <div class="col text-center">
+        <button [disabled]="singInForm.invalid" type="submit" class="btn btn-primary  w-50">Sign in</button>
+        <br><br>
+        <a href="/altausuarios" class="btn btn-primary  w-70">Alta Usuario</a>
+      </div>
   </form>
 </div>
 </div>
