--- a/frontend/src/app/components/altausuarios/altausuarios.component.html
+++ b/frontend/src/app/components/altausuarios/altausuarios.component.html
@@ -1,14 +1,15 @@
 <br><br><br><br><br>
 <div class="container fill justify-content-center align-items-center">
-    <!-- Content here -->
-  
-<div class="card">
+  <!-- Content here -->
+
+  <div class="card">
     <div class="card-body">
       <form [formGroup]="userSignUp" (ngSubmit)="altaUsuario(userSignUp.value)" enctype="multipart/form-data">
         <div class="form-group row">
           <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
           <div class="col-sm-10">
-            <input formControlName="id"  ngModel [email]="true" type="email" class="form-control" id="inputEmail" placeholder="Email">
+            <input formControlName="id" ngModel [email]="true" type="email" class="form-control" id="inputEmail"
+              placeholder="Email">
           </div>
         </div>
 
@@ -26,19 +27,25 @@
           </div>
         </div>
 
-      <div class="form-group row">
-        <label for="inputPass" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-          <input formControlName="password" type="password" class="form-control" id="inputPass" placeholder="Password">
+        <div class="form-group row">
+          <label for="inputPass" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input formControlName="password" type="password" class="form-control" id="inputPass"
+              placeholder="Password">
+          </div>
         </div>
-      </div>
 
-      <br>
-      <button [disabled]="userSignUp.invalid" type="submit" class="btn btn-primary  w-50">Dar Alta</button>
-      <a href="/login" class="btn btn-primary  w-70">Go Back</a>
-    </form>
+        <br>
+        <div class="col text-center">
+          <button [disabled]="userSignUp.invalid" type="submit" class="btn btn-primary  w-50">Dar Alta</button>
+          <br>
+          <br><a (click)="backClicked()" class="btn btn-primary  w-70">Go Back</a>
+          <!-- <br> -->
+          <!-- <a href="/listausers" class="btn btn-primary  w-70">Go Back</a> -->
+        </div>
+      </form>
 
-</div>
-</div>
+    </div>
+  </div>
 
 </div>
