--- a/frontend/src/app/components/login/login.component.html
+++ b/frontend/src/app/components/login/login.component.html
@@ -1,42 +1,51 @@
 <br>
 <br><br><br><br><br>
 <div class="container fill justify-content-center align-items-center">
-    <!-- Content here -->
-    <div class="form-check form-switch">
-        <input #modoStrorage [checked]="this._strogaType.isLocalAcivate()"  (change)="eventCheck(modoStrorage.checked)" class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
-        <ng-template [ngIf]="!this._strogaType.isLocalAcivate()" [ngIfElse]="volatilOn">
-          <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil Off</label>
-        </ng-template>
-        <ng-template #volatilOn>
-          <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil On</label>
-        </ng-template>
-      </div>
+  <!-- Content here -->
+  <div class="form-check form-switch">
 
-<div class="card">
+    <input [disabled]="" #modoStrorage [checked]="this._strogaType.isLocalAcivate()" (change)="eventCheck(modoStrorage.checked)"
+      class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
+
+    <ng-template [ngIf]="!this._strogaType.isLocalAcivate()" [ngIfElse]="volatilOn">
+      <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil Off</label>
+    </ng-template>
+    <ng-template #volatilOn>
+      <label class="form-check-label" for="flexSwitchCheckDefault">Modo Volatil On</label>
+    </ng-template>
+
+  </div>
+
+  <div class="card">
     <div class="card-body">
-<form [formGroup]="singInForm" (ngSubmit)="loginUsuario(singInForm.value)">
-      <div class="form-group row">
-        <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
-        <div class="col-sm-10">
-          <input formControlName="id"  ngModel [email]="true" type="email" class="form-control" id="inputEmail" placeholder="Email">
+      <form [formGroup]="singInForm" (ngSubmit)="loginUsuario(singInForm.value)">
+        <div class="form-group row">
+          <label for="inputEmail" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input formControlName="id" ngModel [email]="true" type="email" class="form-control" id="inputEmail"
+              placeholder="Email">
+          </div>
         </div>
-      </div>
 
-      <div class="form-group row">
-        <label for="inputPass" class="col-sm-2 col-form-label">Password</label>
-        <div class="col-sm-10">
-          <input formControlName="password" type="password" class="form-control" id="inputPass" placeholder="Password">
+        <div class="form-group row">
+          <label for="inputPass" class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-10">
+            <input formControlName="password" type="password" class="form-control" id="inputPass"
+              placeholder="Password">
+          </div>
         </div>
-      </div>
 
-      <br>
-      <div class="col text-center">
-        <button [disabled]="singInForm.invalid" type="submit" class="btn btn-primary  w-50">Sign in</button>
-        <br><br>
-        <a href="/altausuarios" class="btn btn-primary  w-70">Alta Usuario</a>
-      </div>
-  </form>
-</div>
-</div>
+        <br>
+        <div class="col text-center">
+          <button [disabled]="singInForm.invalid" type="submit" class="btn btn-primary  w-50">Sign in</button>
+          <br><br>
+          <a href="/altausuarios" class="btn btn-primary  w-70">Alta Usuario</a>
+
+          <!-- <br><br>
+        <a (click)="estaLog()" class="btn btn-primary  w-70">Probar</a> -->
+        </div>
+      </form>
+    </div>
+  </div>
 
 </div>
